--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^5.8.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-redux": "^6.0.0",
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-thunk": "^2.3.0"
