--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^2.3.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-thunk": "^2.3.0"
