--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-select": "^2.3.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
