--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "django": "^1.0.0",
     "firebase": "^5.8.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -14,7 +15,8 @@
     "react-select": "^2.3.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
