--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "react-select": "^2.3.0",
-    "reactstrap": "^8.0.0",
+    "react-star-ratings": "^2.3.0",
     "react-stripe-checkout": "^2.6.3",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-thunk": "^2.3.0",
